kubernetes/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
  selector:
    service: jellyfin
