kubernetes/apps/jellyfin/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: apps
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "jellyfin.skuxnet"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
